# BaaLS

./: .gitattributes  .gitignore  BaaLS_Ledger_State_Transition.md  BaaLS_Overview.md  BaaLS_Smart_Contract_Module.md  BaaLS_Transaction_Mempool.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: BaaLS_CLI_SDK_Wiring_Overview.md  BaaLS_Consensus_Engine_PoA.md  BaaLS_Core_Engine_Runtime.md  BaaLS_Storage_Layer.md  Codebase_Review.md
src/: consensus.rs  contracts.rs  ledger.rs  lib.rs  main.rs  runtime.rs  storage.rs  sync.rs  types.rs
