[package]
name = "baals"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
ed25519-dalek = { version = "2.2", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
wasmtime = "18.0"
rand = "0.8"
thiserror = "1.0"
async-trait = "0.1" 